--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <title>Assignment 2 for Group </title>
 </head>
 <body>
-    
+    <div class="container">
+        
+    </div>
 </body>
 </html>
