Setting Up HTML/CSS

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2 for Group </title>
+    <link rel = "stylesheet" type = "text/css" href ="style.css">
 </head>
 <body>
+    <h1 class=center>Assignment 2: Jackson Kenyon, Andrew Carroll, Micheal Kim</h1>
     <div class="container">
         
     </div>
