--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
               
             </form>
         
-            <script src="search.js"></script>
+            <script src="script.js"></script>
         </div>
     </body>
 </html>
