Css Search For Styles

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
         <h1 class=center>Assignment 2: Jackson Kenyon, Andrew Carroll, Micheal Kim</h1>
         <div class="container">
             <form class="search-form">
-                <input type="text" class="search" placeholder="Search Here">
+                <input type="text" class="search" placeholder="Search Here...">
                 <ul class="filtered">
+                    <br></br>
                     <li>Testing</li>
                 </ul>
                     
